[package]
name = "cw-asset"
description = "Helper library for interacting with Cosmos assets (SDK coins and CW20 tokens)"
version = "0.3.0"
authors = ["larry <larry@delphidigital.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/larry0x/cw-asset"

[lib]
doctest = false # do not run doc tests

[features]
default = []
astroport = []

[dependencies]
astroport-core = { package = "astroport", rev = "f1caf2e4cba74d60ff0e8ae3abba9d9e1f88c06e", git = "https://github.com/astroport-fi/astroport-core.git" }
cosmwasm-std = "1"
cosmwasm-std-0_16 = { package = "cosmwasm-std", version = "0.16" }
cw-storage-plus = "0.16"
cw20 = "0.16"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
