[package]
name = "cw-asset"
description = "Helper library for interacting with Cosmos assets (SDK coins and CW20 tokens)"
version = "0.3.0"
authors = ["larry <larry@delphidigital.io>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/larry0x/cw-asset"

[lib]
doctest = false # do not run doc tests

[features]
default = []

[dependencies]
cosmwasm-std = "1"
cw-storage-plus = "0.16"
cw20 = "0.16"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-schema = "1.1.0"
test-case = "2.2.2"
