[package]
name = "apollo-cw-asset"
description = "Helper library for interacting with Cosmos assets (SDK coins and CW20 tokens)"
version = "0.1.1"
authors = ["larry <larry@delphidigital.io>", "Apollo DAO Contributors <shared@apollo.farm>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/apollodao/apollo-cw-asset"

[lib]
doctest = false # do not run doc tests

[features]
default = []
astroport = ["dep:astroport"]

[dependencies]
cosmwasm-std = "1"
cw-storage-plus = "1.0.1"
cw20 = "1.0.1"
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
astroport = { version = "2.8.0", optional = true }

[dev-dependencies]
test-case = "2.2.2"
